# MAS418_Oblig_3

./: .gitignore  .gitmodules  README.md
PLC/MAS418_LAB1/MAS418_LAB1/: MAS418_LAB_Exercise.tsproj
PLC/MAS418_LAB1/MAS418_LAB1/LabExercise/: Simulator.TcTTO  Visualization Manager.TcVMO
PLC/MAS418_LAB1/MAS418_LAB1/LabExercise/CraneControl/Function blocks/Sub blocks/: FB_MotionReferenceGenerator_limit.TcPOU
PLC/MAS418_LAB1/MAS418_LAB1/LabExercise/HMI/Sub/: Animation.TcVIS
PLC/MAS418_LAB1/MAS418_LAB1/LabExercise/Programs/: MAIN.TcPOU
ROS/src/: readme.md
ROS/src/ads_example_package/: CMakeLists.txt  package.xml
ROS/src/ads_example_package/src/: ads_node.cpp
ROS/src/crane_controller/: package.xml  setup.cfg  setup.py
ROS/src/crane_controller/crane_controller/: crane_HMI.py  crane_controller.py
ROS/src/crane_interfaces/: CMakeLists.txt  package.xml
ROS/src/crane_interfaces/msg/: MotionReference.msg  PressureMessage.msg  Visualisation.msg
ROS/src/urdf_tutorial/: CMakeLists.txt  package.xml
ROS/src/urdf_tutorial/launch/: crane_visualization.launch.py  display.launch.py
ROS/src/urdf_tutorial/scripts/: crane_HMI.py  crane_controller.py
ROS/src/urdf_tutorial/urdf/: green_crane.urdf
